--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "astro-form",
-	"version": "0.0.1",
+	"version": "0.0.2",
 	"description": "Forms for astro",
 	"homepage": "https://github.com/warpsio/astro-form",
 	"bugs": {
@@ -16,6 +16,7 @@
 	],
 	"exports": "./src/index.js",
 	"keywords": [
+		"astro-component",
 		"astro"
 	],
 	"author": "Giulio Zanchetta",
@@ -27,10 +28,10 @@
 		"release": "standard-version"
 	},
 	"devDependencies": {
-		"astro": "next",
+		"astro": "latest",
 		"prettier": "^2.5.1",
 		"prettier-plugin-astro": "^0.0.12",
-		"sass": "^1.49.7",
+		"sass": "^1.49.8",
 		"standard-version": "^9.3.2"
 	}
 }
