--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "astro-form",
-	"version": "0.0.2",
+	"type": "module",
+	"version": "0.0.6",
 	"description": "Forms for astro",
 	"homepage": "https://github.com/warpsio/astro-form",
 	"bugs": {
@@ -28,10 +29,10 @@
 		"release": "standard-version"
 	},
 	"devDependencies": {
-		"astro": "^0.23.0",
-		"prettier": "^2.5.1",
+		"astro": "^1.0.0-beta.0",
+		"prettier": "^2.6.2",
 		"prettier-plugin-astro": "^0.0.12",
-		"sass": "^1.49.8",
+		"sass": "^1.49.11",
 		"standard-version": "^9.3.2"
 	}
 }
